# co2-eos

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
bench/: PROFILING.md  baseline_cpu.json  baseline_gpu.json  compare.py  compare_cpu.json  compare_gpu.json  compare_gpu_scaling.json  fixed_iters_study.py  gpu_bench.sh  profile_baseline.py  seed_study.py  seed_table_study.py  validate_analytic.py  validate_core.py
co2_eos/: __init__.py  core.py  helmholtz.py  inversions.py  saturation.py  span_wagner.py  transport.py
co2_eos/data/: saturation_table.npz  seed_table.npz
data/: README.md
docs/: MAP.md
examples/: launch_demo.ipynb  readme_check.py
scripts/: generate_saturation_table.py  generate_seed_table.py
tests/: test_accuracy_vs_coolprop.py  test_analytic_derivs.py  test_dome_detection.py  test_inversion_gradients.py  test_no_coolprop_runtime.py  test_rho_u_inversion.py
