[build-system]
# setuptools >=77 supports SPDX `license = "..."` as the canonical field;
# we use it instead of the deprecated `License ::` trove classifier.
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co2-eos"
version = "0.1.0"
description = "Differentiable CO₂ thermodynamic properties in JAX"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "John Patrick Therrien", email = "john@flux-tech.de" },
]
keywords = ["CO2", "equation-of-state", "thermodynamics", "JAX", "autodiff", "Span-Wagner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[project.optional-dependencies]
test = [
    "CoolProp>=6.6",
    "pytest>=7.0",
]
# `dev` adds anything needed to regenerate the saturation table from scratch
# (scipy for the Maxwell-construction solver, CoolProp for initial guesses).
dev = [
    "co2-eos[test]",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/John-FluxTech/co2-eos"
Repository = "https://github.com/John-FluxTech/co2-eos"
Documentation = "https://github.com/John-FluxTech/co2-eos#readme"
Issues = "https://github.com/John-FluxTech/co2-eos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["co2_eos*"]

[tool.setuptools.package-data]
co2_eos = ["data/*.npz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
